@@ -455,25 +455,20 @@ under the License.
 
   <profiles>
     <profile>
-      <id>hadoop_non_secure</id>
-       <activation>
-        <property>
-          <name>hadoop</name>
-          <value>non_secure</value>
-        </property>
+      <id>hadoop_0.20.203</id>
+      <activation>
+        <activeByDefault>true</activeByDefault>
       </activation>
-      <properties>
-        <hadoop.version>0.20.2</hadoop.version>
-      </properties>
+      <dependencies>
+        <dependency>
+          <groupId>org.apache.hadoop</groupId>
+          <artifactId>hadoop-core</artifactId>
+          <version>${hadoop.version}</version>
+	  <scope>provided</scope>
+        </dependency>
+      </dependencies>
+
       <build>
-        <resources>
-          <resource>
-            <directory>src/main/java/org/apache/giraph/hadoop</directory>
-            <excludes>
-              <exclude>BspTokenSelector.java</exclude>
-            </excludes>
-          </resource>
-        </resources>
         <plugins>
           <plugin>
             <groupId>org.sonatype.plugins</groupId>
@@ -489,7 +484,48 @@ under the License.
               </execution>
             </executions>
             <configuration>
-              <symbols>HADOOP_NON_SECURE</symbols>
+              <symbols>HADOOP_NON_SASL_RPC,HADOOP_NON_INTERVERSIONED_RPC</symbols>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <profile>
+      <id>hadoop_non_secure</id>
+       <activation>
+        <property>
+          <name>hadoop</name>
+          <value>non_secure</value>
+        </property>
+      </activation>
+      <properties>
+        <hadoop.version>0.20.2</hadoop.version>
+      </properties>
+      <dependencies>
+        <dependency>
+          <groupId>org.apache.hadoop</groupId>
+          <artifactId>hadoop-core</artifactId>
+          <version>${hadoop.version}</version>
+	  <scope>provided</scope>
+        </dependency>
+      </dependencies>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.sonatype.plugins</groupId>
+            <artifactId>munge-maven-plugin</artifactId>
+            <version>${munge-maven-plugin.version}</version>
+            <executions>
+              <execution>
+                <id>munge</id>
+                <phase>generate-sources</phase>
+                <goals>
+                  <goal>munge</goal>
+                </goals>
+              </execution>
+            </executions>
+            <configuration>
+              <symbols>HADOOP_NON_SECURE,HADOOP_NON_SASL_RPC,HADOOP_NON_INTERVERSIONED_RPC</symbols>
             </configuration>
           </plugin>
           <plugin>
@@ -502,22 +538,8 @@ under the License.
               </excludes>
               <source>${compileSource}</source>
               <target>${compileSource}</target>
-              <showWarnings>true</showWarnings>
             </configuration>
           </plugin>
-	  <plugin>
-	    <groupId>org.apache.maven.plugins</groupId>
-	    <artifactId>maven-surefire-plugin</artifactId>
-	    <version>2.6</version>
-	    <configuration>
-	      <systemProperties>
-		<property>
-		  <name>prop.jarLocation</name>
-		  <value>target/munged/giraph-${project.version}-jar-with-dependencies.jar</value>
-		</property>
-	      </systemProperties>
-	    </configuration>
-	  </plugin>
         </plugins>
       </build>
     </profile>
@@ -538,6 +560,18 @@ under the License.
           <scope>system</scope>
           <systemPath>${hadoop.jar.path}</systemPath>
         </dependency>
+        <dependency>
+          <groupId>commons-logging</groupId>
+          <artifactId>commons-logging-api</artifactId>
+          <version>1.0.4</version>
+	  <scope>runtime</scope>
+        </dependency>
+        <dependency>
+          <groupId>commons-httpclient</groupId>
+          <artifactId>commons-httpclient</artifactId>
+          <version>3.0.1</version>
+	  <scope>runtime</scope>
+        </dependency>
       </dependencies>
       <build>
         <resources>
@@ -549,6 +583,18 @@ under the License.
           </resource>
         </resources>
         <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>${maven-compiler-plugin.version}</version>
+            <configuration>
+              <excludes>
+                <exclude>**/BspTokenSelector.java</exclude>
+              </excludes>
+              <source>${compileSource}</source>
+              <target>${compileSource}</target>
+            </configuration>
+          </plugin>
           <plugin>
             <groupId>org.sonatype.plugins</groupId>
             <artifactId>munge-maven-plugin</artifactId>
@@ -563,23 +609,106 @@ under the License.
               </execution>
             </executions>
             <configuration>
-              <symbols>HADOOP_FACEBOOK</symbols>
+              <symbols>HADOOP_NON_SECURE,HADOOP_NON_SASL_RPC</symbols>
             </configuration>
           </plugin>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-compiler-plugin</artifactId>
-            <version>${maven-compiler-plugin.version}</version>
-            <configuration>
-              <excludes>
-                <exclude>**/BspTokenSelector.java</exclude>
-              </excludes>
-              <source>${compileSource}</source>
-              <target>${compileSource}</target>
-            </configuration>
-          </plugin>
+	  <plugin>
+	    <groupId>org.apache.maven.plugins</groupId>
+	    <artifactId>maven-surefire-plugin</artifactId>
+	    <version>2.6</version>
+	    <configuration>
+	      <systemProperties>
+		<property>
+		  <name>prop.jarLocation</name>
+		  <value>../target/giraph-${project.version}-jar-with-dependencies.jar</value>
+		</property>
+	      </systemProperties>
+	    </configuration>
+	  </plugin>
         </plugins>
       </build>
+    </profile>
+
+    <profile>
+      <id>hadoop_0.23</id>
+       <activation>
+        <property>
+          <name>hadoop</name>
+          <value>0.23</value>
+        </property>
+      </activation>
+      <properties>
+        <hadoop.version>0.23.1</hadoop.version>
+      </properties>
+      <dependencies>
+	<dependency>
+	  <groupId>org.apache.hadoop</groupId>
+	  <artifactId>hadoop-common</artifactId>
+	  <version>${hadoop.version}</version>
+	  <scope>provided</scope>
+	</dependency>
+	<dependency>
+	  <groupId>org.apache.hadoop</groupId>
+	  <artifactId>hadoop-mapreduce-client-core</artifactId>
+	  <version>${hadoop.version}</version>
+	  <scope>provided</scope>
+	</dependency>
+	<dependency>
+	  <groupId>org.apache.hadoop</groupId>
+	  <artifactId>hadoop-mapreduce-client-common</artifactId>
+	  <version>${hadoop.version}</version>
+	</dependency>
+      </dependencies>
+    </profile>
+    <profile>
+      <id>hadoop_trunk</id>
+       <activation>
+        <property>
+          <name>hadoop</name>
+          <value>trunk</value>
+        </property>
+      </activation>
+      <properties>
+        <hadoop.version>3.0.0-SNAPSHOT</hadoop.version>
+      </properties>
+      <dependencies>
+	<dependency>
+	  <groupId>org.apache.hadoop</groupId>
+	  <artifactId>hadoop-common</artifactId>
+	  <version>${hadoop.version}</version>
+	  <scope>provided</scope>
+	</dependency>
+	<dependency>
+	  <groupId>org.apache.hadoop</groupId>
+	  <artifactId>hadoop-mapreduce-client-core</artifactId>
+	  <version>${hadoop.version}</version>
+	  <scope>provided</scope>
+	</dependency>
+	<dependency>
+	  <groupId>org.apache.hadoop</groupId>
+	  <artifactId>hadoop-mapreduce-client-common</artifactId>
+	  <version>${hadoop.version}</version>
+	  <scope>provided</scope>
+	</dependency>
+	<dependency>
+	  <groupId>org.apache.hadoop</groupId>
+	  <artifactId>hadoop-auth</artifactId>
+	  <version>${hadoop.version}</version>
+	  <scope>provided</scope>
+	</dependency>
+	<dependency>
+	  <groupId>commons-configuration</groupId>
+	  <artifactId>commons-configuration</artifactId>
+	  <version>1.6</version>
+	  <scope>runtime</scope>
+	</dependency>
+        <dependency>
+          <groupId>commons-httpclient</groupId>
+          <artifactId>commons-httpclient</artifactId>
+          <version>3.0.1</version>
+	  <scope>runtime</scope>
+        </dependency>
+     </dependencies>
     </profile>
   </profiles>
 
@@ -589,12 +718,6 @@ under the License.
       <artifactId>junit</artifactId>
       <version>3.8.1</version>
       <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.hadoop</groupId>
-      <artifactId>hadoop-core</artifactId>
-      <version>${hadoop.version}</version>
-      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>org.codehaus.jackson</groupId>
@@ -661,5 +784,5 @@ under the License.
       <version>1.8.5</version>
       <scope>test</scope>
     </dependency>
-  </dependencies>
+ </dependencies>
 </project>
